# InnoTour-Backend

./: .gitignore  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
gateway/: pyproject.toml
services/agency/: pyproject.toml
services/auth/: pyproject.toml
services/auth/alembic/: env.py
services/auth/app/api/: dependencies.py
services/auth/app/api/v1/: auth.py
services/auth/app/core/: exceptions.py  middleware.py
services/auth/app/crud/: crud_user.py
services/auth/app/models/: user.py
services/auth/app/schemas/: user.py
services/auth/app/services/: security.py
services/billing/: pyproject.toml
services/calendar/: pyproject.toml
services/reconciliation/: pyproject.toml
services/registration/: pyproject.toml
services/scheduling/alembic/: env.py
services/scheduling/app/: main.py
services/scheduling/app/api/v1/: agency.py  dependencies.py  slot_categories.py  time_slots.py
services/scheduling/app/core/: config.py  exceptions.py
services/scheduling/app/crud/: crud_agency.py  crud_slot_category.py  crud_timeslot.py
services/scheduling/app/db/: session.py
services/scheduling/app/models/: agency.py  booking.py  slot_category.py  time_slot.py
services/scheduling/app/schemas/: agency.py  slot.py  slot_category.py  token.py
services/user/: README.md
services/user/alembic/: env.py
services/user/app/: main.py
services/user/app/api/: dependencies.py
services/user/app/api/v1/: auth.py
services/user/app/core/: config.py  exceptions.py
services/user/app/crud/: crud_token.py  crud_user.py
services/user/app/models/: token.py  user.py
services/user/app/schemas/: token.py  user.py
services/validation/: pyproject.toml
